# task-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/core/: config.py  constants.py  database.py  datetime_utils.py  dependencies.py  errors.py  event_bus.py  health.py  logging.py  middleware.py  openapi_responses.py
app/services/tasks/: MODULE.md  constants.py  dependencies.py  enums.py  errors.py  interfaces.py
app/services/tasks/api/v1/: router.py
app/services/tasks/application/: dto.py  service.py
app/services/tasks/domain/: events.py  models.py
app/services/tasks/infrastructure/: listeners.py  repository.py
app/services/tasks/tests/: test_task_model.py  test_task_service.py
docker/: Dockerfile  docker-compose.yaml
docs/: FRD.md  PRD.md  TIS.md
tests/: conftest.py
tests/contract/: test_task_repository_interface.py
tests/e2e/: test_schemathesis.py
tests/hurl/: aaa_sort_priority.hurl  healthz.hurl  readyz.hurl  request_id_propagation.hurl  task_create.hurl  task_create_duplicate_title.hurl  task_create_validation_errors.hurl  task_full_flow.hurl  task_lifecycle.hurl  task_list_filter_sort.hurl  task_not_found.hurl  task_patch_partial.hurl  task_put_full_replace.hurl
tests/integration/core/: test_config.py  test_error_envelope.py  test_health_endpoints.py  test_request_id_propagation.py
tests/integration/services/tasks/: test_create_task.py  test_delete_task.py  test_get_task.py  test_list_tasks.py  test_patch_task.py  test_put_task.py  test_repository_sqlmodel.py
