[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internal-task-service"
version = "0.6.0"
description = "Internal Task Service."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.27",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=25.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "pre-commit>=4.0",
    "schemathesis>=3.30",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "app/services/**/tests"]
skips = ["B101"]
severity = "medium"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
src = ["app", "tests"] # Explicitly include app and tests
fix = true
exclude = [
    "alembic",
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "SIM",     # flake8-simplify
    "C4",      # flake8-comprehensions
    "T20",     # flake8-print
    "PLC0415", # import-outside-top-level (enforces CLAUDE.md "no inline imports")
]
ignore = [
    "B008", # FastAPI uses ``Depends(...)`` / ``Query(...)`` as default values
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]            # re-exports are valid here
"tests/conftest.py" = ["E402"]      # APP_ENV must be set BEFORE app imports

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/services", "tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib --cov=app --cov-report=term --cov-fail-under=80"
markers = [
    "unit: pure in-module tests",
    "integration: FastAPI app + repo, in-process",
    "contract: port-conformance tests",
    "e2e: external network / container",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/main.py",       # bootstrap; covered transitively by integration tests
    "*/__init__.py",     # almost always empty package markers
    "*/tests/*",         # don't measure test files against themselves
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
